--- a/crud/src/index.css
+++ b/crud/src/index.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -14,7 +13,8 @@ body {
 }
 
 .container {
-  border: solid 1px rgba(255, 255, 255, 0.2);
+  border: solid 2px rgba(255, 255, 255, 0.2);
+  padding: 20px;
 }
 
 table {
@@ -22,10 +22,7 @@ table {
   font-size: 14px;
   table-layout: fixed;
   border-collapse: collapse;
-}
-
-thead {
-  background: #a781a8;
+  text-align: center;
 }
 
 th {
@@ -120,3 +117,13 @@ tbody tr:hover {
   margin: 16px 0;
   font-size: 16px;
 }
+#imagenInfo{
+  border-radius: 5px;
+  margin-top: 5px;
+  box-shadow: 10px 13px 13px -4px #212121;
+}
+.subtitulos{
+  color: #fff;
+  border-bottom: 2px solid #964f7f;
+}
+
